# snappy-android

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
snappy-android/: build.gradle
snappy-android/src/androidTest/java/org/sebastiaan/snappy_android/: ExampleInstrumentedTest.java
snappy-android/src/main/: AndroidManifest.xml
snappy-android/src/main/cpp/: CMakeLists.txt
snappy-android/src/main/cpp/android_snappy/: CMakeLists.txt  SnappyNative.cpp  native-lib.cpp
snappy-android/src/main/java/org/sebastiaan/snappy_android/: Snappy.java  SnappyApi.java  SnappyError.java  SnappyErrorCode.java  SnappyLoader.java  SnappyNative.java
snappy-android/src/main/java/org/xerial/snappy/: Snappy.java
snappy-android/src/test/java/org/sebastiaan/snappy_android/: ExampleUnitTest.java
